# across-the-board

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: constants.py  controllers.py  main.py  models.py  routes.py
app/: constants.py  display.py  main.py
react_app/: package-lock.json  package.json
react_app/app/: globals.css  layout.tsx  page.tsx  theme.ts
react_app/components/: ChatInterface.tsx  CrosswordClues.tsx  CrosswordForm.tsx  CrosswordGrid.tsx
react_app/lib/: api-client.ts  types.ts
scripts/: ingest_clues.ipynb  run_api.py  setup_env.sh  setup_weaviate.py
src/: settings.py  weaviate_client.py
src/chat/: chat_service.py  prompts.py
src/crossword/: clue_generator.py  constants.py  crossword_generator.py  prompts.py
streamlit_app/: api_client.py  display.py  main.py
